kubernetes/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: node-tp
spec:
  selector:
    app: api
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
status:
  loadBalancer: {}
