kubernetes/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: node-tp
spec:
  ingressClassName: nginx
  rules:
    - host: api-node.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
            path: /
